--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 osrs-char-sheets/src/app/environments/environment.prod.ts
 osrs-char-sheets/src/app/environments/environment.ts
 osrs-char-sheets/src/assets/.gitkeep
+osrs-char-sheets/.firebase/hosting.ZGlzdFxvc3JzLWNoYXItc2hlZXRz.cache
+osrs-char-sheets/.firebase/hosting.ZGlzdA.cache
